[project]
name = "ComfyUI-RvTools-X"
description = "ComfyUI custom nodes and utilities for workflow building, type conversions, checkpoint/pipe loaders and file utilities."
version = "2.5.7"
license = { file = "LICENSE" }

authors = [
	{ name = "r-vage" }
]

keywords = ["ComfyUI","custom-nodes","workflow","conversion","combo","checkpoint","pipeline","save-save_generation_data","RvToolsX","RvTools-X"]

readme = "README.md"

[project.urls]
Repository = "https://github.com/r-vage/ComfyUI-RvTools-X"

[tool.comfy]
PublisherId = "rvage"
DisplayName = "ComfyUI-RvTools-X"
Icon = ""
